# task_scheduler

./: .gitignore
executebashtask/: Cargo.toml
executebashtask/src/: main.rs
executebashtask/src/models/: tasks.rs
executebashtask/src/task_execute/: execute_task.rs  mod.rs  start_task.rs
jobsfetchandassign/: Cargo.toml
jobsfetchandassign/src/: main.rs
jobsfetchandassign/src/models/: tasks.rs
jobsfetchandassign/src/pull_from_db/: db_interactor.rs  mod.rs  push_to_queue.rs
task_api/: README.md  index.ts  package-lock.json  package.json
task_api/constants/: prisma.ts
task_api/helpers/: tryCatch.ts
task_api/prisma/: schema.prisma
task_api/prisma/migrations/20250427045854_type_of_task/: migration.sql
task_api/prisma/migrations/20250427052641_bigint_int/: migration.sql
task_api/prisma/migrations/20250429080525_remigrating_errored_db/: migration.sql
task_api/prisma/migrations/20250501100704_remove_node_job/: migration.sql
task_api/zodTypes/: addNormalTaskType.ts
