[package]
name = "executebashtask"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.30.0", features = [ "tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.5", features = [ "postgres", "runtime-tokio", "tls-native-tls", "macros"]}
chrono = "0.4.41"
