[package]
name = "jobsfetchandassign"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = [ "postgres", "runtime-tokio", "tls-native-tls", "macros"]}
tokio = { version = "1.44.2", features = ["full"] }
